--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -4,10 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Home</title>
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1>This is the home page</h1>
-    <p>Welcome to the home page of our website.</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>This is the home page</h1>
+            <p>Welcome to the home page of our website.</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
