--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -4,7 +4,10 @@
         <div class="row">
             <div class="col">
                 <h1>This is the about page</h1>
-                <p>This is some text</p>
+                <p>new test</p>
+                <p>new test</p>
+
+                <p>This came from the template: {{index .StringMap "test"}}</p>
             </div>
         </div>
     </div>
