--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -8,6 +8,13 @@
                 <p>new test</p>
 
                 <p>This came from the template: {{index .StringMap "test"}}</p>
+                <p>
+                    {{if ne (index .StringMap "remote_ip") ""}}
+                        Your IP address is {{index .StringMap "remote_ip"}}
+                    {{else}}
+                        I don't know your IP address yet. Visit the <a href="/">home page</a> so I can set it.
+                    {{end}}
+                </p>
             </div>
         </div>
     </div>
